--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
+<!--    <meta name="theme-color" content="#000000" />-->
+    <meta name="theme-color" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Top popular films</title>
+    <title>MyBurger</title>
   </head>
-  <body style="background: #2b2b2b">
+<!--  <body style="background: #2b2b2b">-->
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
